# triggers

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.rst  copilot_bootstrap.sh  pyproject.toml  run_local.sh  setup.cfg  uwsgi.ini
braid_triggers/: app.py  auth_utils.py  aws_helpers.py  config.py  config_vals.py  expressions.py  logs.py  models.py  persistence.py  tasks.py  toml_settings.py  trigger_main.py  trigger_views.py
braid_triggers/cli/: __init__.py  pseudo_trigger_cli.py
braid_triggers/sdk/: __init__.py  auth.py
config/: global.toml  localtest.toml  pytest.toml  test.toml
copilot/: .workspace  buildspec.yml  pipeline.yml
copilot/globus-pseudo-trigger/: manifest.yml
copilot/pseudo-triggers-api/: manifest.yml
copilot/pseudo-triggers-api/addons/: pseudo_trigger_triggers.yml
copilot/triggers/: manifest.yml
copilot/triggers-api/: manifest.yml
copilot/triggers-api/addons/: trigger_triggers.yml
pseudo_trigger/: aiohttp_session.py  app.py  auth_utils.py  aws_helpers.py  aws_ops.py  config.py  expressions.py  log.py  logs.py  models.py  persistence.py  settings.py  tasks.py  trigger_main.py  trigger_views.py
pseudo_trigger/cli/: __init__.py  auth.py  pseudo_trigger_cli.py  token_management.py
pseudo_trigger/sdk/: auth.py  trigger_client.py
test/: create_dynamodb.py  create_queue.py  pop_queue.py  push_queue.py  register_trigger.py  test_dynamo.py  test_expressions.py
trigger_prototype/: __init__.py  lambda_function.py  service.py
