[tool.poetry]
name = "pseudo_trigger"
version = "0.1.0"
description = "Experiments with a trigger service"
authors = ["Jim Pruyne <pruyne@globus.org>"]

packages = [
{include="pseudo_trigger"}
]

[tool.poetry.scripts]
pseudo-trigger = "pseudo_trigger.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.0"
boto3 = "^1.14.48"
botocore = "^1.17.48"
uvicorn = "^0.11.8"
globus-sdk = "^1.9.0"
simpleeval = "^0.9.10"
globus-automate-client = "^0.10"
typer = "^0.3.2"
fair-research-login = {path = "../fair-research/native-login"}
shellingham = "^1.3.2"
cachetools = "^4.1.1"
aiohttp = "^3.6.2"
colorama = "^0.4.3"
starlette-context = "^0.2.3"
toml = "^0.10.1"
globus-action-provider-tools = "^0.10.3"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
importmagic = "^0.1.7"
epc = "^0.0.5"
python-language-server = {extras = ["rope", "pyflakes", "mccabe", "pycodestyle", "pydocstyle"], version = "^0"}
pyls-black = "^0.4.6"
pyls-mypy = "^0.1.8"
isort = "^5.4.2"
pre-commit = "^2.7.1"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"
