[tool.poetry]
name = "braid_triggers"
version = "0.1.0"
description = "Experiments with a trigger service"
authors = ["Jim Pruyne <pruyne@globus.org>"]

packages = [
{include="braid_triggers"}
]

[tool.poetry.scripts]
pseudo-trigger = "braid_triggers.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1"
boto3-stubs = {extras = ["essential", "secretsmanager"], version = "^1"}
botocore = "^1"
uvicorn = "^0"
globus-sdk = "^1"
simpleeval = "^0.9"
globus-automate-client = "^0"
cachetools = "^5"
types-cachetools = "^5"
aiohttp = "^3"
colorama = "^0"
starlette-context = "^0"
toml = "^0"
globus-action-provider-tools = "^0"
fastapi = "^0"
structlog = "^22"

[tool.poetry.group.dev.dependencies]
importmagic = "^0.1"
epc = "^0"
pytest-asyncio = "^0"
pre-commit = "^2"
isort = "^5"
types-toml = "^0"
python-lsp-server = "^1"
pyls-flake8 = "^0"
pylsp-mypy = "^0"
pyls-isort = "^0"
python-lsp-black = "^1"
pylsp-rope = "^0"
httpx = "^0"
ruff = "^0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["braid_triggers"]
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
platform = "linux"
ignore_missing_imports = true
plugins = "pydantic.mypy"

[tool.ruff]
line-length = 90
# Assume Python 3.10.
target-version = "py310"
